--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Vincent's Page</h1>
     <nav>
       <ul>
-        <li><a href="homepage.html">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="about.html" class="active">About</a></li>
         <li><a href="portfolio.html">Portfolio</a></li>
         <li><a href="contact.html">Contact</a></li>
