--- a/portfolio.html
+++ b/portfolio.html
@@ -24,12 +24,12 @@
     <div class="portfolio-grid">
         <div class="portfolio-item" onclick="showProjectDetails('mathboost')">
             <h3>MathBoost</h3>
-            <img src="https://i.ibb.co/C5GX9Z0N/IMG-20250515-111305.jpg" alt="MathBoost">
+            <img src="https://i.ibb.co/fzm0mjdc/1001094342.jpg" alt="MathBoost">
             <p>Click for details</p>
         </div>
         <div class="portfolio-item" onclick="showProjectDetails('CyberOasis')">
             <h3>Project 2</h3>
-            <img src="https://i.ibb.co/1YfMnk6Y/Cyber-Oasis.png" alt="CyberOasis">
+            <img src="https://i.ibb.co/xqBwx4dt/unnamed.png" alt="CyberOasis">
             <p>Click for details</p>
         </div>
     </div>
