--- a/about.html
+++ b/about.html
@@ -36,7 +36,7 @@
     </div>
 
     <div class="column right">
-      <img src="https://i.ibb.co/zVzbVkGf/FB-IMG-1747278609670.jpg" alt="Profile Picture">
+      <img src="https://i.ibb.co/FbkwppGZ/1001094343.jpg" alt="Profile Picture">
     </div>
   </div>
 
